# FlowDay

./: .gitignore  .mcp.json  .mutmut-cache  .pre-commit-config.yaml  CLAUDE.md  README.md  claude-project-instructions.md  docker-compose.yml  railway.toml  skills-lock.json
backend/: .dockerignore  .env.example  .mutmut-cache  CLAUDE.md  Dockerfile  alembic.ini  bandit.yml  env.example  pyproject.toml  railway.toml
backend/.hypothesis/constants/: 04414a72b280c6c0  0d49d11590fa5b4c  19d72c306b3634bd  287d5c340ac7cf8e  2c023cdaf6a26c92  2ebc2cbce4d1b15a  383b246514f41e06  496d0bf07d853fe4  4ff149ef220ccf61  5374d941dafa6244  541ec49a8a79f9d2  593f0a3d4dbd8118  5de4329a7e3093ab  7752f023910c8e4b  7c925d7d56c422bd  7db07bf020b42f16  88703ff2abdaa8ba  923d23a3e51c5844  a9419dbc1f3d127e  b5307cb53f6c0873  d15ae47db2015f74  d1be21409fa9d97d  d33a5cf5ffab01a5  da39a3ee5e6b4b0d  dba188d0d875d9a0  e621f92564bba69c  f076f46866b0cfd3  f0c4bb6f1e42359b
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_users_table.py  0003_add_projects_table.py  0004_add_tasks_table.py  0005_add_schedule_blocks_table.py  0006_add_time_entries_table.py  0007_add_external_syncs_table.py  0008_add_agent_score_history_table.py  0009_add_weekly_reviews_table.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  code_analyst.py  judge.py  meeting_analyst.py  narrative_writer.py  orchestrator.py  pattern_detector.py  schemas.py  (+2 more)
backend/mutants/: pyproject.toml
backend/tests/: CLAUDE.md  conftest.py  test_anonymizer_email.py  test_health.py
(+296 files in other folders)
